# json-render

./: .gitignore  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/web/: .env.example  package.json
apps/web/components/demo/: link.tsx
examples/chat/: .env.example  package.json
examples/chat/lib/: ai-provider.ts
examples/dashboard/: next.config.js  package.json
examples/deep_rag/: README.md  agent.py  checkpointer.py  langgraph.json  main.py  manage_history.py  pyproject.toml
examples/deep_rag/agent_data/: AGENTS.md
examples/deep_rag/core/: config.py  database.py  deps.py  security.py
examples/deep_rag/frontend/: .env.example  package.json
examples/deep_rag/frontend/app/: layout.tsx  page.tsx
examples/deep_rag/frontend/app/api/generate/: route.ts
examples/deep_rag/frontend/lib/: agent.ts  ai-provider.ts
examples/deep_rag/frontend/lib/render/: catalog.ts  registry.tsx
examples/deep_rag/frontend/lib/tools/: ragflow.ts
examples/deep_rag/models/: __init__.py  thread.py  user.py
examples/deep_rag/rag_agent/: __init__.py  prompts.py  tools.py
examples/deep_rag/routers/: auth.py  chat.py  ragflow.py  threads.py  users.py
examples/deep_rag/schemas/: thread.py  user.py
examples/deep_rag/services/: agent.py
examples/deep_rag_deepagents/: README.md
examples/deep_rag_deepagents/backend/: .env.example  agent.py  main.py  prompts.py  pyproject.toml  tools.py
examples/deep_rag_deepagents/frontend/: .env.example  eslint.config.js  package.json  tsconfig.json
examples/deep_rag_deepagents/frontend/app/: layout.tsx  page.tsx
examples/deep_rag_deepagents/frontend/app/api/proxy/: route.ts
examples/deep_rag_deepagents/frontend/lib/render/: renderer.tsx
examples/remotion/: next.config.js  package.json
examples/vue-chat/: .env.example  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
examples/vue-chat/server/: agent.ts  ai-provider.ts  catalog.ts  index.ts
examples/vue-chat/src/: App.vue
examples/vue-chat/src/components/: ChatMessage.vue
examples/vue-chat/src/lib/: catalog.ts  registry.ts  useChat.ts  useSpecFromParts.ts
