[project]
name = "deep-rag-deepagents-backend"
version = "0.1.0"
description = "Deep RAG × deepagents 后端 — json-render 集成演示"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.2.6",
    "langchain-openai>=1.0.2",
    "httpx>=0.28.1",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "langgraph>=0.2.0",
]

[tool.uv]
override-dependencies = [
    "nbconvert>=7.17.0",
    "protobuf>=6.33.5",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
